<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <artifactId>forge</artifactId>
        <groupId>forge</groupId>
        <version>2.0.04-SNAPSHOT</version>
    </parent>

    <artifactId>forge-gui-mobile</artifactId>
    <packaging>jar</packaging>
    <name>Forge Mobile</name>

    <build>
        <sourceDirectory>src</sourceDirectory>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>forge</groupId>
            <artifactId>forge-core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>forge</groupId>
            <artifactId>forge-game</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>forge</groupId>
            <artifactId>forge-ai</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>forge</groupId>
            <artifactId>forge-gui</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.tommyettinger</groupId>
            <artifactId>textratypist</artifactId>
            <version>0.8.2</version>
            <exclusions>
                <exclusion>
                    <groupId>com.badlogicgames.gdx</groupId>
                    <artifactId>gdx</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx-controllers</groupId>
            <artifactId>gdx-controllers-core</artifactId>
            <version>2.2.3</version>
            <exclusions>
                <exclusion>
                    <groupId>com.badlogicgames.gdx</groupId>
                    <artifactId>gdx</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx</artifactId>
            <version>1.13.0</version>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-freetype</artifactId>
            <version>1.13.0</version>
        </dependency>
        <dependency>
            <groupId>com.github.raeleus.TenPatch</groupId>
            <artifactId>tenpatch</artifactId>
            <version>5.2.3</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <groupId>com.badlogicgames.gdx</groupId>
                    <artifactId>gdx</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-box2d</artifactId>
            <version>1.13.0</version>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-ai</artifactId>
            <version>1.8.2</version>
            <exclusions>
                <exclusion>
                    <groupId>com.badlogicgames.gdx</groupId>
                    <artifactId>gdx</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

</project>
